# franedits

./: .1qm1d22zrsniw897306325~  .3iquu7fk2kxu23467886083~  .3knnmn3m5pbmx3214988686~  db.sqlite3  pyproject.toml  readme.md  requirement.txt
backend/: settings.py  urls.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_messages_discord.py  0003_alter_messages_discord.py
core/static/: style.css
core/templates/: base.html  contact.html  main.html
static/: WEBDEVELOPER.eb5d008506b4.webm  cashcow.6cac7872b3dc.webm  new reel website.fd8070996f1d.webm  staticfiles.json  style.b65002e1be18.css  style.css  style.fd75064b5961.css
