[tool.poetry]
name = "franedits"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
whitenoise = "6.4.0"
Django = "4.2"
django-cors-headers = "3.14.0"
tzdata = "2023.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
